(1) Some modifications to grading function, to ensure output as numpy array (2) New section to print simulated distribution of grades with %s as text output

--- a/Programming for data analytics - Part 3 Simulation.ipynb
+++ b/Programming for data analytics - Part 3 Simulation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,6 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "# (1) Function 'grade' to allocate grade based on score\n",
     "\n",
@@ -57,13 +56,12 @@
     "    # scores array\n",
     "    grades = ([grade(x) for x in scores]) # create a list of grades as a list\n",
     "    grades = np.asarray(grades) # convert list to numpy array\n",
-    "    return grades\n",
-    "\n"
+    "    return grades"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,22 +99,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "third = np.count_nonzero(grades == '3rd Class Honours')\n",
+    "Two2 = np.count_nonzero(grades == '2nd Class Honours (Grade 2)')\n",
+    "Two1 = np.count_nonzero(grades == '2nd Class Honours (Grade 1)')\n",
+    "first  = np.count_nonzero(grades == '1st Class Honours')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of grades:\n",
+      "Number of first class honours:  7,248 ( 23% )\n",
+      "Number of 2nd Class Honours (Grade 2) 8,723 ( 27% )\n",
+      "Number of 2nd Class Honours (Grade 1) 14,919 ( 23% )\n",
+      "Number of 1st Class Honours 1,294 ( 4% )\n",
+      "Total number of awards:  32,184\n"
+     ]
     }
    ],
    "source": [
-    "type(grades)"
+    "print(\"Distribution of grades:\")\n",
+    "print( \"Number of first class honours: \", \"{:,}\".format(first), \"(\",\"{0:.0f}%\".format(first/students * 100),\")\")\n",
+    "print(\"Number of 2nd Class Honours (Grade 2)\", \"{:,}\".format(Two2),\"(\",\"{0:.0f}%\".format(Two2/students * 100),\")\")\n",
+    "print(\"Number of 2nd Class Honours (Grade 1)\", \"{:,}\".format(Two1) ,\"(\",\"{0:.0f}%\".format(first/students * 100),\")\")\n",
+    "print(\"Number of 1st Class Honours\", \"{:,}\".format(third) ,\"(\",\"{0:.0f}%\".format(third/students * 100),\")\")\n",
+    "print(\"Total number of awards: \", \"{:,}\".format(first + Two1 + Two2 + third))"
    ]
   },
   {
