--- a/Programming for Data Analysis - Part 3 - Simulation.ipynb
+++ b/Programming for Data Analysis - Part 3 - Simulation.ipynb
@@ -4,6 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Programming for Data Analysis - Project December 2018\n",
+    "\n",
+    "## Project Instructions:\n",
+    "For this project you must create a data set by simulating a real-world phenomenon of your choosing. You may pick any phenomenon you wish – you might pick one that is of interest to you in your personal or professional life. Then, rather than collect data related to the phenomenon, you should model and synthesise such data using Python. We suggest you use the numpy.random package for this purpose\n",
+    "\n",
+    "Choose a real-world phenomenon that can be measured and for which you could collect at least one-hundred data points across at least four different variables.\n",
+    "\n",
+    "    Investigate the types of variables involved, their likely distributions, and their relationships with each other.\n",
+    "    Synthesise/simulate a data set as closely matching their properties as possible.\n",
+    "    Detail your research and implement the simulation in a Jupyter notebook – the data set itself can simply be displayed in an output cell within the notebook.\n",
+    "\n",
+    "Note that this project is about simulation – you must synthesise a data set. Some students may already have some real-world data sets in their own files. It is okay to base your synthesised data set on these should you wish (please reference it if you do), but the main task in this project is to create a synthesised data set. The next section gives an example project idea.\n",
+    "\n",
+    "\n",
+    "## Project implementation and output\n",
+    "\n",
+    "This project aims to use python and in particular the numpy.random library to model the distribution of final grades achieved by full-time Honours Degree students studying in Irish Higher Education institutions.\n",
+    "\n",
+    "This project utilised introductory programming skills developed in Semester 1 of the Higher Diploma in Data Analytics, while adding skills and knowledge gained in Semester II, in particular the use of probalility distributions. In addition, the project allowed for the expansion to my programming knowledge to take in reading data from Excel workbooks into a dataframe, modifying the data (deleting columns, replacing values etc) and saving pandas dataframes as .csv files. A big limitation of this project was my lack of prior knowledge of or experience in utilizing probability distributions, so this project has greatly enhanced my capabilities in this area (albeit from a low base!)\n",
+    "\n",
+    "This project is divided into three sections, for clarity left in three seperate notebooks.\n",
+    "\n",
+    "Part 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "Part 2\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Part 3\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "In this final section we will simulate the distribution of grades for a cohort of Irish Higher Education Graduates (Full-time honours degree only)\n",
     "\n",
     "The method will be as follows:\n",
